--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 <body>
 	<div class="reveal">
 		<div class="slides">
-			<section>Hello!</section>
+			<section>Hello! <br> <a href="url">https://github.com/kolibril13/plywood-gallery-presentation</a>
+				 </section>
 		</div>
 	</div>
 
