--- a/index.html
+++ b/index.html
@@ -24,8 +24,29 @@
 <body>
 	<div class="reveal">
 		<div class="slides">
-			<section>Hello! <br> <a href="url">https://github.com/kolibril13/plywood-gallery-presentation</a>
-				 </section>
+			<section>
+
+				<h4>Projekte für das Python FrameWork "Jupyter"</h4>
+				<ul>
+					<li>Image-Compare</li>
+					<li>Output-Capture</li>
+					<li>Plywood Gallery</li>
+				</ul>
+			</section>
+			<section>
+				<h4>Image-Compare</h4>
+				<video width="100%" src="assets/compare_widget.mp4" controls>
+			</section>
+			<section>
+				<h4>Image-Compare</h4>
+				<video width="100%" src="assets/cat_compare.mov" controls>
+			</section>
+			<section>
+
+				<h4>Output-Capture</h4>
+				<video width="100%" src="assets/capture_tweet.mov" controls>
+
+			</section>
 		</div>
 	</div>
 
