--- a/index.html
+++ b/index.html
@@ -47,6 +47,50 @@
 				<video width="100%" src="assets/capture_tweet.mov" controls>
 
 			</section>
+
+			<section>
+
+				<h1>Plywood Gallery</h1>
+
+			</section>
+			<section>
+
+				<h4> 1. Erstellen</h4>
+				<video width="100%" src="assets/demo1_erstellen.mov" controls>
+
+			</section>
+
+			<section>
+
+				<h4> 2. Auf website verfügbar</h4>
+				<video width="100%" src="assets/demo2_website.mov" controls>
+
+			</section>
+
+			<section>
+
+				<h4> 3. Einfügen</h4>
+				<video width="100%" src="assets/demo3_extension.mov" controls>
+
+			</section>
+
+			<section>
+
+				<h4> 4. weiteres Beispiel</h4>
+				<video width="100%" src="assets/demo4_futher_example.mov" controls>
+
+			</section>
+
+			<section data-markdown>
+				<textarea data-template>
+					### Zum ausprobieren:
+					<medium>  1. https://octoframes.github.io/compare_view/
+						<br><br>
+					 <small> 2. https://kolibril13.github.io/further_ideas_plywood_gallery/web3_2DArray.html</small>
+					 
+				</textarea>
+			</section>
+
 		</div>
 	</div>
 
