--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
 				<video width="100%" src="assets/cat_compare.mov" controls>
 			</section>
 			<section>
+				<h4>Reichweite: ca. 4000 Nutzer</h4>
+				<img width="100%" src="assets/reichweite.png" controls>
+			</section>
+			<section>
 
 				<h4>Output-Capture</h4>
 				<video width="100%" src="assets/capture_tweet.mov" controls>
